<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Main content -->


    <!-- Left Navigation View -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Toolbar with constraints -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#D97769"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/open_right_drawer_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="300dp"
                android:src="@mipmap/user_profile_foreground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.appcompat.widget.Toolbar>


        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tool_bar">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/backBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@mipmap/aero_foreground"
                        android:clickable="true"
                        android:focusable="true">

                    </ImageView>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="-60dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/profile_title"
                        android:textSize="25dp">

                    </TextView>

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

            <RelativeLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/full_rounded">
                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/user_profile_foreground"
                    android:scaleType="centerCrop" />

            </RelativeLayout>


        </RelativeLayout>


        <ScrollView
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingBottom="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/user_name"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold">

                    </TextView>

                    <TextView
                        android:id="@+id/nameText"
                        android:layout_width="350dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="30dp"
                        android:gravity="left|center"
                        android:textSize="20dp"
                        android:background="@drawable/edittext_background"
                        android:hint="John Doe"
                        android:paddingStart="20dp"
                        android:textColorHint="#8c8c8c">

                    </TextView>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/user_regno"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold">

                    </TextView>

                    <TextView
                        android:id="@+id/regText"
                        android:layout_width="350dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="30dp"
                        android:gravity="left|center"
                        android:textSize="20dp"
                        android:background="@drawable/edittext_background"
                        android:hint="123456789"
                        android:paddingStart="20dp"
                        android:textColorHint="#8c8c8c">

                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/user_dob"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold">

                    </TextView>

                    <TextView
                        android:id="@+id/dobText"
                        android:layout_width="350dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="30dp"
                        android:gravity="left|center"
                        android:textSize="20dp"
                        android:background="@drawable/edittext_background"
                        android:hint="01/01/2000"
                        android:paddingStart="20dp"
                        android:textColorHint="#8c8c8c">

                    </TextView>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/user_phone"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold">

                    </TextView>

                    <TextView
                        android:id="@+id/phoneText"
                        android:layout_width="350dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="30dp"
                        android:gravity="left|center"
                        android:textSize="20dp"
                        android:background="@drawable/edittext_background"
                        android:hint="1234567890"
                        android:paddingStart="20dp"
                        android:textColorHint="#8c8c8c">

                    </TextView>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/user_email"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold">

                    </TextView>

                    <TextView
                        android:id="@+id/emailText"
                        android:layout_width="350dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="30dp"
                        android:gravity="left|center"
                        android:textSize="20dp"
                        android:background="@drawable/edittext_background"
                        android:hint="jdoe@gmail.com"
                        android:paddingStart="20dp"
                        android:textColorHint="#8c8c8c">

                    </TextView>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/user_learner"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold">

                    </TextView>

                    <TextView
                        android:id="@+id/learnerText"
                        android:layout_width="350dp"
                        android:layout_height="55dp"
                        android:layout_marginStart="30dp"
                        android:gravity="left|center"
                        android:textSize="20dp"
                        android:background="@drawable/edittext_background"
                        android:hint="jdoe@learner.manipal.edu"
                        android:paddingStart="20dp"
                        android:textColorHint="#8c8c8c">

                    </TextView>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/user_nationality"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold">

                    </TextView>

                    <TextView
                        android:id="@+id/nationalityText"
                        android:layout_width="350dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="30dp"
                        android:gravity="left|center"
                        android:textSize="20dp"
                        android:background="@drawable/edittext_background"
                        android:hint="Indian"
                        android:paddingStart="20dp"
                        android:textColorHint="#8c8c8c">

                    </TextView>

                </LinearLayout>


            </LinearLayout>
        </ScrollView>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view_left"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu_left" />

    <!-- Right Navigation View -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view_right"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_gravity="end"
        app:menu="@menu/drawer_menu_right" />



</androidx.drawerlayout.widget.DrawerLayout>
